tests/ui/linkage-attr/issue-109144.stderr
error[E0459]: `#[link]` attribute requires a `name = "string"` argument
  --> $DIR/issue-109144.rs:2:1
   |
LL | #[link(kind = "static", modifiers = "+whole-archive,+bundle")]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ missing `name` argument

error: aborting due to previous error

For more information about this error, try `crablangc --explain E0459`.
